# MLops-project

./: .gitignore  .pre-commit-config.yaml  MLproject  README.md  airflow.Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: pre-commit.yaml  test-code.yaml  validate-model.yaml
api/: README.md  api.Dockerfile  app.py  gradio.Dockerfile  gradio_app.py  ml.Dockerfile
configs/: README.md  airflow_configration.yaml  airflow_setup.yaml  data_sample.yaml  data_transformations.yaml  experiment.yaml  main.yaml  predict.yaml
configs/model/: lr.yaml  model.yaml  rf.yaml  xgboost.yaml
data/: README.md
data/samples/: sample.csv.dvc
mlruns/0/: meta.yaml
models/: README.md
models/xgboost-challenger88/basic_xgboost/: MLmodel  conda.yaml  input_example.json  python_env.yaml  requirements.txt
notebooks/: README.md  business_data_understanding.ipynb  data.ipynb  data_analysis.ipynb  data_quality.ipynb  data_transformations.ipynb  eda.ipynb  eda_presentation.ipynb  expectations.ipynb  feature_descriptions.csv  mlpoc.ipynb  poc.ipynb  test.py  transformations_demo.ipynb  xgboost_experiment.ipynb
reports/: README.md  validation_results_random_forest_challenger10_Combined_Flights_2022_v7.0.html  validation_results_random_forest_challenger11_Combined_Flights_2022_v7.0.html  validation_results_xgboost_challenger88_Combined_Flights_2022_v7.0.html
scripts/: README.md  airflow.sh  airflow_activate.sh  airflow_cleanup.sh  airflow_logs.sh  deploy_docker.sh  extend_activate.sh  extract_data.sh  predict_samples.sh  push_sample_version.sh  test_data.sh
services/: README.md
services/airflow/: airflow.cfg
services/airflow/dags/: README.md  data_extract_dag.py  data_extract_v0_dag.py  data_extract_v1_dag.py  data_prepare.py  data_prepare_dag.py  hello_dag.py  test_dag.py
services/airflow/logs/scheduler/: latest
services/gx/: great_expectations.yml
services/gx/checkpoints/: sample_checkpoint.yml  transformations_checkpoint.yml
services/gx/expectations/: .ge_store_backend_id  feature_transform.json  sample_validation.json
src/: README.md  data.py  data_quality.py  data_transformations.py  download_sample.py  evaluate.py  main.py  model.py  predict.py  src  utils.py  validate.py
src/outputs/2024-06-18/13-14-25/.hydra/: hydra.yaml
tests/: README.md  test_fetch_features.py  test_load_features.py  test_preprocess_data.py  test_read_datastore.py  test_sample_data.py  test_validate_features.py  test_validate_initial_data.py
tests/samples/: test.csv  test_transformed.csv
(+6 files in other folders)
