[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
hydra-core = "^1.3.2"
dvc = "^3.51.2"
pytest = "^8.2.2"
gdown = "^5.2.0"
apache-airflow = "^2.9.2"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.2"
numpy = "<2.0.0"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
pylint = "^3.2.5"
great-expectations = "^0.18.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
