[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
hydra-core = "^1.3.2"
dvc = "^3.51.2"
pytest = "^8.2.2"
gdown = "^5.2.0"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.2"
numpy = "<2.0.0"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
pylint = "^3.2.5"
great-expectations = "^0.18.17"
zenml = "0.58.2"
pyarrow = "15.0.2"
mlflow = "2.14.2"
mlflow-skinny = "2.14.2"
giskard = "2.14.0"
xgboost = "^2.1.0"

[tool.poetry.group.dev]
[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pre-commit = "^3.7.1"

[tool.ruff]
ignore = [
    "E402",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
